# fastapi-shortener-api

./: .gitignore  README.md  cli.py  crud.py  database.py  main.py  models.py  pyproject.toml  schemas.py  server.py  shortener.py
